<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">北京市地面公交满意度调查</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">公共交通乘客满意度调查</string>
    <string name="copyright">© Beijing University of Technology</string>
    <string name="start">开始调查</string>
    <string name="exit">退出</string>
    <string name="informationTitle">基本信息</string>
    <string name="nameInput">调查人姓名：</string>
    <string name="nameInputHint">请输入调查人姓名</string>
    <string name="dateInput">调查日期：</string>
    <string name="dateInputHint">请输入八位数字的调查日期</string>
    <string name="timeInput">调查时间：</string>
    <string name="timeInputHint">请输入六位数字调查时间</string>
    <string name="zoneInput">行政区域：</string>
    <string name="zoneInputHint">请输入行政区域</string>
    <string name="lineInput">被调查线路号：</string>
    <string name="lineInputHint">请输入调查线路号</string>
    <string name="stationNameInput">乘客上车站点名称：</string>
    <string name="stationNameInputHint">请输入上车站台</string>
    <string name="stationTypeInput">乘客上车站台类型：</string>
    <string name="stationTypeInputHint">请输入乘客上车站台类型</string>
    <string name="stationType1">枢纽站</string>
    <string name="stationType2">路侧普通站</string>
    <string name="stationType3">港湾式停靠站</string>
    <string name="stationType4">待定</string>
    <string name="busTypeInput">车辆类型：</string>
    <string name="busType1">双层巴士</string>
    <string name="busType2">绞接巴士</string>
    <string name="busType3">非绞接巴士</string>
    <string name="busType4">其他</string>
    <string name="sexInput">乘客性别：</string>
    <string name="sexMan">男</string>
    <string name="sexWoman">女</string>
    <string name="infoBtn">进入调查</string>
    <string name="personInfoTitle">个人信息</string>
    <string name="incomeInput">请问您目前的收入是？</string>
    <string name="incomeRadio1">2000元以下</string>
    <string name="incomeRadio2">2000元-4000元</string>
    <string name="incomeRadio3">4000元-6000元</string>
    <string name="incomeRadio4">6000元-8000元</string>
    <string name="incomeRadio5">8000元以上</string>
    <string name="ageInput">请问您的年龄是？</string>
    <string name="ageRadio1">18岁以下</string>
    <string name="ageRadio2">18岁-24岁</string>
    <string name="ageRadio3">25岁-34岁</string>
    <string name="ageRadio4">35岁-44岁</string>
    <string name="ageRadio5">45岁-54岁</string>
    <string name="ageRadio6">55岁-64岁</string>
    <string name="ageRadio7">64岁以上</string>
    <string name="carInput">请问您在北京是否有私家车？</string>
    <string name="carYesRadio">有</string>
    <string name="carNoRadio">没有</string>
    <string name="purposeInput">请问您本次出行的目的是？</string>
    <string name="purposeRadio1">回家</string>
    <string name="purposeRadio2">工作</string>
    <string name="purposeRadio3">公务外出</string>
    <string name="purposeRadio4">上课/学习</string>
    <string name="purposeRadio5">个人事务（银行/就医等）</string>
    <string name="purposeRadio6">休闲娱乐/健身购物</string>
    <string name="purposeRadio7">其他</string>
    <string name="favoriteLineInput">请问您常乘坐的公交线路有哪些？</string>
    <string name="favoriteLineInputHint">输入1或2条即可</string>
    <string name="opinionInput">您对北京公交有哪些建议和意见？</string>
    <string name="opinionInputHint">请输入对北京公交的建议和意见</string>
    <string name="majorQuestionTitle">二级指标</string>
    <string name="subQuestionTitle">三级指标</string>
    <string name="questionContent">调查问题内容</string>
    <string name="questionLabel">标签</string>
    <string name="btnNext">下一题</string>
    <string name="btnPre">上一题</string>
    <string name="choosePic">满意度图片</string>
    <string name="chooseScore1">1</string>
    <string name="chooseScore2">2</string>
    <string name="chooseScore3">3</string>
    <string name="chooseScore4">4</string>
    <string name="chooseScore5">5</string>
    <string name="chooseScore6">6</string>
    <string name="chooseScore7">7</string>
    <string name="chooseScore8">8</string>
    <string name="chooseScore9">9</string>
    <string name="chooseScore10">10</string>
    <string name="chooseScore11">不了解</string>
    <string name="submitText">提交</string>
    
=======
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">北京市地面公交满意度调查</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">公共交通乘客满意度调查</string>
    <string name="copyright">© Beijing University of Technology</string>
    <string name="start">开始调查</string>
    <string name="exit">退出</string>
    <string name="informationTitle">基本信息</string>
    <string name="nameInput">调查人姓名：</string>
    <string name="nameInputHint">请输入调查人姓名</string>
    <string name="dateInput">调查日期：</string>
    <string name="dateInputHint">请输入八位数字的调查日期</string>
    <string name="timeInput">调查时间：</string>
    <string name="timeInputHint">请输入六位数字调查时间</string>
    <string name="zoneInput">行政区域：</string>
    <string name="zoneInputHint">请输入调查区域</string>
    <string name="lineInput">线路号：</string>
    <string name="lineInputHint">请输入调查线路号</string>
    <string name="stationNameInput">上车站台名称：</string>
    <string name="stationNameInputHint">请输入上车站台</string>
    <string name="stationTypeInput">上车站台类型：</string>
    <string name="stationTypeInputHint">请输入上车站台类型</string>
    <string name="stationType1">枢纽站</string>
    <string name="stationType2">路侧普通站</string>
    <string name="stationType3">港湾式停靠站</string>
    <string name="stationType4">其他</string>
    <string name="busTypeInput">车辆类型：</string>
    <string name="busType1">双层巴士</string>
    <string name="busType2">绞接巴士</string>
    <string name="busType3">非绞接巴士</string>
    <string name="busType4">其他</string>
    <string name="sexInput">乘客性别：</string>
    <string name="sexMan">男</string>
    <string name="sexWoman">女</string>
    <string name="infoBtn">进入调查</string>
    <string name="personInfoTitle">个人信息</string>
    <string name="incomeInput">请问您目前的收入是？</string>
    <string name="incomeRadio1">2000元以下</string>
    <string name="incomeRadio2">2000元-4000元</string>
    <string name="incomeRadio3">4000元-6000元</string>
    <string name="incomeRadio4">6000元-8000元</string>
    <string name="incomeRadio5">8000元以上</string>
    <string name="ageInput">请问您的年龄是？</string>
    <string name="ageRadio1">18岁以下</string>
    <string name="ageRadio2">18岁-24岁</string>
    <string name="ageRadio3">25岁-34岁</string>
    <string name="ageRadio4">35岁-44岁</string>
    <string name="ageRadio5">45岁-54岁</string>
    <string name="ageRadio6">55岁-64岁</string>
    <string name="ageRadio7">64岁以上</string>
    <string name="carInput">请问您在北京是否有私家车？</string>
    <string name="carYesRadio">有</string>
    <string name="carNoRadio">没有</string>
    <string name="purposeInput">请问您本次出行的目的是？</string>
    <string name="purposeRadio1">回家</string>
    <string name="purposeRadio2">工作</string>
    <string name="purposeRadio3">公务外出</string>
    <string name="purposeRadio4">上课/学习</string>
    <string name="purposeRadio5">个人事务/就医等</string>
    <string name="purposeRadio6">休闲娱乐/健身购物</string>
    <string name="purposeRadio7">其他</string>
    <string name="favoriteLineInput">请问您常乘坐的公交线路有哪些？</string>
    <string name="favoriteLineInputHint">输入1或2条即可</string>
    <string name="opinionInput">您对北京公交有哪些建议和意见？</string>
    <string name="opinionInputHint">请输入对北京公交的建议和意见</string>
    <string name="majorQuestionTitle">二级指标</string>
    <string name="subQuestionTitle">三级指标</string>
    <string name="questionContent">调查问题内容</string>
    <string name="questionLabel">标签</string>
    <string name="btnNext">下一题</string>
    <string name="btnPre">上一题</string>
    <string name="choosePic">满意度图片</string>
    <string name="chooseScore1">1</string>
    <string name="chooseScore2">2</string>
    <string name="chooseScore3">3</string>
    <string name="chooseScore4">4</string>
    <string name="chooseScore5">5</string>
    <string name="chooseScore6">6</string>
    <string name="chooseScore7">7</string>
    <string name="chooseScore8">8</string>
    <string name="chooseScore9">9</string>
    <string name="chooseScore10">10</string>
    <string name="chooseScore11">不了解</string>
    <string name="submitText">提交</string>
    
>>>>>>> a389d0b706fb83e4768397eda3e4c45afc8d1c82
</resources>