<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:useDefaultMargins="true" >

        <TextView
            android:id="@+id/incomeTextView"
            style="@style/PersonInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="0"
            android:text="@string/incomeInput" />

        <RadioGroup
            android:id="@+id/incomeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/incomeRadio1"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incomeRadio1" />

            <RadioButton
                android:id="@+id/incomeRadio2"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incomeRadio2" />

            <RadioButton
                android:id="@+id/incomeRadio3"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incomeRadio3" />

            <RadioButton
                android:id="@+id/incomeRadio4"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incomeRadio4" />

            <RadioButton
                android:id="@+id/incomeRadio5"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incomeRadio5" />
        </RadioGroup>

        <TextView
            android:id="@+id/ageTextView"
            style="@style/PersonInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="2"
            android:text="@string/ageInput" />

        <RadioGroup
            android:id="@+id/ageRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/ageRadio1"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ageRadio1" />

            <RadioButton
                android:id="@+id/ageRadio2"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ageRadio2" />

            <RadioButton
                android:id="@+id/ageRadio3"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ageRadio3" />

            <RadioButton
                android:id="@+id/ageRadio4"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ageRadio4" />

            <RadioButton
                android:id="@+id/ageRadio5"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ageRadio5" />

            <RadioButton
                android:id="@+id/ageRadio6"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ageRadio6" />

            <RadioButton
                android:id="@+id/ageRadio7"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ageRadio7" />
        </RadioGroup>

        <TextView
            android:id="@+id/carTextView"
            style="@style/PersonInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/carInput" />

        <RadioGroup
            android:id="@+id/carRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/carYesRadio"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carYesRadio" />

            <RadioButton
                android:id="@+id/carNoRadio"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carNoRadio" />
        </RadioGroup>

        <TextView
            android:id="@+id/purposeTextView"
            style="@style/PersonInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/purposeInput" />

        <RadioGroup
            android:id="@+id/purposeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="7"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/purposeRadio1"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purposeRadio1" />

            <RadioButton
                android:id="@+id/purposeRadio2"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purposeRadio2" />

            <RadioButton
                android:id="@+id/purposeRadio3"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purposeRadio3" />

            <RadioButton
                android:id="@+id/purposeRadio4"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purposeRadio4" />

            <RadioButton
                android:id="@+id/purposeRadio5"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purposeRadio5" />

            <RadioButton
                android:id="@+id/purposeRadio6"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purposeRadio6" />

            <RadioButton
                android:id="@+id/purposeRadio7"
                style="@style/PersonInfoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purposeRadio7" />
        </RadioGroup>

        <TextView
            android:id="@+id/favoriteLineTextView"
            style="@style/PersonInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="8"
            android:text="@string/favoriteLineInput" />

        <EditText
            android:id="@+id/favoriteLineEditText"
            style="@style/PersonInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="9"
            android:hint="@string/favoriteLineInputHint"
            android:inputType="text" />

        <TextView
            android:id="@+id/opinionTextView"
            style="@style/PersonInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="10"
            android:text="@string/opinionInput" />

        <EditText
            android:id="@+id/opinionEditText"
            style="@style/PersonInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="11"
            android:hint="@string/opinionInputHint"
            android:inputType="text" />

        <Button
            android:id="@+id/submitBtn"
            style="@style/PersonInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/submitText" />
    </GridLayout>

</ScrollView>