<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".PersonInformationActivity" >

    <TextView
        android:id="@+id/majorQuestionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/questionLabel" />

    <ScrollView
        android:id="@+id/majorQustionScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/majorQuestionContentTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionContent" >
            </TextView>

            <RadioGroup
                android:id="@+id/majorChooseRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/majorChooseRadio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseScore1" />

                <RadioButton
                    android:id="@+id/majorChooseRadio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseScore2" />

                <RadioButton
                    android:id="@+id/majorChooseRadio3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseScore3" />

                <RadioButton
                    android:id="@+id/majorChooseRadio4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseScore4" />

                <RadioButton
                    android:id="@+id/majorChooseRadio5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseScore5" />

                <RadioButton
                    android:id="@+id/majorChooseRadio6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseScore6" />

                <RadioButton
                    android:id="@+id/majorChooseRadio7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseScore7" />

                <RadioButton
                    android:id="@+id/majorChooseRadio8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseScore8" />

                <RadioButton
                    android:id="@+id/majorChooseRadio9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseScore9" />

                <RadioButton
                    android:id="@+id/majorChooseRadio10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseScore10" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/majorBtnPre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="?android:attr/segmentedButtonStyle"
                    android:layout_gravity="bottom|fill_horizontal|fill_vertical"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/btnPre" />

                <Button
                    android:id="@+id/majorBtnNext"
                    android:layout_width="0dp"
                    style="?android:attr/segmentedButtonStyle"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|fill_horizontal|fill_vertical"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/btnNext" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>